<resources>
    <string name="app_name">Vera Prima App</string>
    <string name="login_user">Username</string>
    <string name="login_email">Email</string>
    <string name="login_psw">Password</string>
    <string name="login_btn">login</string>
    <string name="login_error">Non Loggato: passw o gmail errata</string>
    <string name="login_succesfull">Loggato !!! </string>
    <string name="login_title">Login</string>
    <string name="calc_num01">Primo numero:</string>
    <string name="calc_num02">Secondo numero:</string>
    <string name="calc_btn">somma</string>

    <string name="menu">Menu Principale</string>
    <string name="btn_info">Informazioni</string>
    <string name="btn_ese">Esercizi</string>
    <string name="btn_contatti">Contatti</string>
    <string name="text_info">Scegli una sezione</string>
    <string name="btn_indietro">Back</string>
</resources>