<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="32dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:text="@string/login_title"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginBottom="40dp"
            android:layout_height="60dp"
            android:layout_width="match_parent"/>



        <!-- USERNAME -->
        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:background="@drawable/bg_input"
            android:hint="@string/login_user"
            android:padding="12dp"
            android:textColor="#000"
            android:inputType="textPersonName"
            android:autofillHints="username"/>

        <!-- EMAIL -->
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:background="@drawable/bg_input"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:autofillHints="emailAddress"/>

        <!-- PASSWORD -->
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:background="@drawable/bg_input"
            android:hint="@string/login_psw"
            android:inputType="textPassword"
            android:padding="12dp"
            android:autofillHints="password"/>

        <!-- BUTTON -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="36dp"
            android:text="@string/login_btn"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:background="@drawable/bg_button"/>

        <TextView
            android:id="@+id/textResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text=""
            android:textSize="16sp"
            android:textColor="#000"
            android:visibility="gone"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
