<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/calcMain"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <!-- TOP: INPUT -->
    <LinearLayout
        android:id="@+id/topContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <EditText
            android:id="@+id/editTextCalcImp1"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_input"
            android:hint="@string/calc_num01"
            android:inputType="number"
            android:padding="12dp" />

        <EditText
            android:id="@+id/editTextCalcImp2"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/bg_input"
            android:hint="@string/calc_num02"
            android:inputType="number"
            android:padding="12dp" />

    </LinearLayout>

    <!-- BOTTOM: BUTTON + RESULT -->
    <LinearLayout
        android:id="@+id/bottomContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topContainer"
        app:layout_constraintVertical_bias="0.5">

        <Button
            android:id="@+id/btnCalc"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_button"
            android:text="@string/calc_btn"
            android:textColor="#FFF"
            android:textStyle="bold"
            app:icon="@drawable/somma" />

        <TextView
            android:id="@+id/textResultCalc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textColor="#E91E63"
            android:textSize="28sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>